--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
-<!DOCTYPE html>
-<!--This is an HTML document. -->
-
-<!-- beginning of head
-The <head> of a website generally links to important resources the page will
-need to load. You'll see here a lot of <link>s to CSS files for styles and
-<scripts> for JavaScript files to build interactions.
-→
-
+<html>
 <head>
-  <!-- This tells the browser how to read the document. -->
   <meta charset="utf-8">
-
-  <!-- Tells the browser what the title of this page should be. -->
-  <title>Resume: First Name Last Name</title>
-
-  <!-- Load the page styles. -->
+  <title>Resume: Jerilyn Mendoza</title>
   <link href="style.css" rel="stylesheet">
-
   <meta name="viewport" content="width=device-width">
-
-<!-- end of head →
 </head>
-
-<!-- beginning of body→
 <body>
   <section class=”about-me”>
-       <h1> Your Name </h1>
+       <h1>Jerilyn Mendoza</h1>
+    <h3>Graphics</h3>
+<ul>
+   <li>386 Balubad,Bulakan,Bulacan</li>
+   <li>09497873977</li>
+</ul>
+<h3>Video Editing</h3>
+<ol>
+   <li>Proficient with iMovie</li>
+   <li>Proficient with Adobe Premiere</li>
+</ol>
   </section>
   <section class=”my-skills”>
        <h2> Summary of Skills</h2>
+    <h3>Graphics</h3>
+<ol>
+   <li>Proficient with Photoshop</li>
+   <li>An expert Blender user</li>
+</ol>
+<h3>Video Editing</h3>
+<ol>
+   <li>Proficient with iMovie</li>
+   <li>Proficient with Adobe Premiere</li>
+</ol>
   </section>
   <section class=”my-work-experience”>
        <h2>Work Experience</h2>
@@ -37,7 +39,4 @@ need to load. You'll see here a lot of <link>s to CSS files for styles and
        <h2>Education</h2>
   </section>
 </body>
-<!-- beginning of body→
-
-<!-- end of html→
 </html>
