--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
    <li>Proficient with Adobe Premiere</li>
 </ol>
   </section>
-  <section class=”my-work-experience”>
-       <h2>Work Experience</h2>
-  </section>
   <section class=”my-education”>
        <h2>Education</h2>
+    <p> I am an elemenatray graduate at San Lorenzo Ruiz Montessori in Matungao,Bulakan, Bulacan on March 2012. I transferred to Assumpta Academy from Grade 7 to 10 in San Jose Bulakan, Bulacan and graduated junior high school on March 2017.</p>
   </section>
 </body>
 </html>
