--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <body>
   <section class=”about-me”>
        <h1>Jerilyn Mendoza</h1>
-    <h3>Graphics</h3>
+    <h3>About Me</h3>
 <ul>
    <li>386 Balubad,Bulakan,Bulacan</li>
    <li>09497873977</li>
+  <li>mjerilyn25@gmail.com<li>
 </ul>
 <h3>Video Editing</h3>
 <ol>
@@ -34,7 +35,7 @@
   </section>
   <section class=”my-education”>
        <h2>Education</h2>
-    <p> I am an elemenatray graduate at San Lorenzo Ruiz Montessori in Matungao,Bulakan, Bulacan on March 2012. I transferred to Assumpta Academy from Grade 7 to 10 in San Jose Bulakan, Bulacan and graduated junior high school on March 2017.</p>
+  &nbsp;<p> I am an elemenatray graduate at San Lorenzo Ruiz Montessori in Matungao,Bulakan, Bulacan on March 2012. I transferred to Assumpta Academy from Grade 7 to 10 in San Jose Bulakan, Bulacan and graduated junior high school on March 2017.</p>
   </section>
 </body>
 </html>
