--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width">
 </head>
 <body>
+  <center>
+    <body style="background-color:#
+    
   <section class=”about-me”>
        <h1>Jerilyn Mendoza</h1>
     <h3>About Me</h3>
