--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <center>
-    <body style="background-color:#
+    <body style="background-color:##F1948A  
     
   <section class=”about-me”>
        <h1>Jerilyn Mendoza</h1>
