--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -5,40 +6,75 @@
   <link href="style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width">
 </head>
+	
 <body>
-  <center>
-    <body style="background-color:##F1948A  
-    
-  <section class=”about-me”>
-       <h1>Jerilyn Mendoza</h1>
-    <h3>About Me</h3>
-<ul>
-   <li>386 Balubad,Bulakan,Bulacan</li>
-   <li>09497873977</li>
-  <li>mjerilyn25@gmail.com<li>
+<center>
+<body style="background-color: #E5E7E9;">
+<div class="a">
+<h2><b>JERILYN M. MENDOZA</b></h2>
+    <ul style="list-style-type: none">
+    <li> 386 Balubad, Bulakan, Bulacan </li> 
+      <li> 09497873977</li>
+      <li>mjerilyn25@gmail.com</li>
+	</ul></div>
+	<hr>
+</center>
+&nbsp;
+<ul class="bullet">
+<li class="head">EDUCATIONAL ATTAINMENT</b></li>
 </ul>
-<h3>Video Editing</h3>
-<ol>
-   <li>Proficient with iMovie</li>
-   <li>Proficient with Adobe Premiere</li>
-</ol>
-  </section>
-  <section class=”my-skills”>
-       <h2> Summary of Skills</h2>
-    <h3>Graphics</h3>
-<ol>
-   <li>Proficient with Photoshop</li>
-   <li>An expert Blender user</li>
-</ol>
-<h3>Video Editing</h3>
-<ol>
-   <li>Proficient with iMovie</li>
-   <li>Proficient with Adobe Premiere</li>
-</ol>
-  </section>
-  <section class=”my-education”>
-       <h2>Education</h2>
-  &nbsp;<p> I am an elemenatray graduate at San Lorenzo Ruiz Montessori in Matungao,Bulakan, Bulacan on March 2012. I transferred to Assumpta Academy from Grade 7 to 10 in San Jose Bulakan, Bulacan and graduated junior high school on March 2017.</p>
-  </section>
+	<ul stye="list-style-type: none">
+		<li><b>Holy Spirit Academy of Malolos</b></li>
+		<p>Bagong Bayan, Malolos, Bulacan</p>
+		<p>June 2017-present</p>
+&nbsp;
+		<li><b>Assumpta Academy</b></li>
+		<p>8 Camino Real Street,San Jose, Bulakan, Bulacan</p>
+		<p>June 2014-March 2017</p>
+	</ul>
+&nbsp;
+<ul class="bullet">
+<li class="head">SEMINARS ATTENDED</b></li>
+</ul>
+	<ul style="list-style-type: none">
+	<li><b>How to Spot Fake News</b></li>
+	<li>Speakers: Matikad Santos </li>
+	<li>Holy Spirit Academy of Malolos</li>
+	<li>August 15, 2017</li>
+&nbsp;
+	<li><b>Sayaw ng Lahi: Folk Dance Workshop</b></li>
+	<li>Speakers: Valerie Baltazar</li>
+	<li>Assumpta Academy</li>
+	<li>March 18, 2017</li>
+&nbsp;
+	<li><b>Future Me: Career Assessment</b></li>
+	<li>Speakers: Michole Santos</li>
+	<li>Assumpta Academy</li>
+	<li>February 9, 2017</li>
+	</ul>	
+&nbsp;
+<ul class="bullet">
+<li class="head">MY SKILLS</b></li>
+</ul>
+	<ol>
+	<li>Accuracy and attention to details</li>
+	<li>Self-motivated, initiative, high level of energy</li>
+  <li> Precision and great hand-eye coordination</li>
+  <li> Good Manual Dexterity</li>
+	</ol>
+&nbsp;
+<ul class="bullet">
+<li class="head">REFERENCES</b></li>
+</ul>
+	<ul style="list-style-type: none">
+		<li>Ms. Shennie Santos</li>
+		<li>Senior High School Teacher, San Francisco Xavier High School</li>
+		<li>09363776005</li>
+&nbsp;
+		<li>Ms.Valerie Baltazar/li>
+		<li>Junior High School Teacher, Assumpta Academy</li>
+		<li>09092961378</li>
+	</ul>
+	
 </body>
 </html>
