--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<li>Senior High School Teacher, San Francisco Xavier High School</li>
 		<li>09363776005</li>
 &nbsp;
-		<li>Ms.Valerie Baltazar/li>
+		<li>Ms.Valerie Baltazar</li>
 		<li>Junior High School Teacher, Assumpta Academy</li>
 		<li>09092961378</li>
 	</ul>
