--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 	</ul></div>
 	<hr>
 </center>
+	&nbsp;
+<ul class="bullet">
+<li class="head">OBJECTIVES</b></li>
+</ul>
+	<ul stye="list-style-type: none">
+<p> To attain a state of physical perfection at work, providing mental satisfaction to patients, and maintaining peace and harmony at work with good technological equipment to assist the daily dental procedures
 &nbsp;
 <ul class="bullet">
 <li class="head">EDUCATIONAL ATTAINMENT</b></li>
